test_suite/tests/ui/float/validate/deprecated_with.stderr
error: Unknown validator `with`.
       Possible values are `min`, `max`, `predicate`, `finite`.
 --> tests/ui/float/validate/deprecated_with.rs:3:19
  |
3 | #[nutype(validate(with = |c| c>0))]
  |                   ^^^^
